[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.1.3"
pytube = "^12.1.0"
modules = "^1.0.0"
requests = "^2.28.1"
api = "^0.0.7"
utils = "^1.0.1"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
confluent-kafka = "^1.9.2"

[tool.poetry.dev-dependencies]
python-lsp-server = "^1.5.0"
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"